--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,14 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-java</artifactId>
             <version>${flink.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
             <version>${flink.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -46,7 +48,7 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-metrics-dropwizard</artifactId>
-            <version>${flink.version}</version>
+            <version>1.10.0</version>
         </dependency>
 
     </dependencies>
