--- a/scripts/docker/docker-compose.yml
+++ b/scripts/docker/docker-compose.yml
@@ -34,3 +34,11 @@ services:
       INFLUXDB_ADMIN_USER: flink-metrics
       INFLUXDB_ADMIN_PASSWORD: qwerty
       INFLUXDB_HTTP_AUTH_ENABLED: "true"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    links:
+      - influxdb
