--- a/scripts/docker/docker-compose.yml
+++ b/scripts/docker/docker-compose.yml
@@ -23,22 +23,22 @@ services:
     environment:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
 
-  influxdb:
-    image: influxdb:latest
-    restart: always
-    container_name: influxdb
-    ports:
-      - 8086:8086
-    environment:
-      INFLUXDB_DB: flink
-      INFLUXDB_ADMIN_USER: flink-metrics
-      INFLUXDB_ADMIN_PASSWORD: qwerty
-      INFLUXDB_HTTP_AUTH_ENABLED: "true"
-
-  grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
-    ports:
-      - "3000:3000"
-    links:
-      - influxdb
+#  influxdb:
+#    image: influxdb:latest
+#    restart: always
+#    container_name: influxdb
+#    ports:
+#      - 8086:8086
+#    environment:
+#      INFLUXDB_DB: flink
+#      INFLUXDB_ADMIN_USER: flink-metrics
+#      INFLUXDB_ADMIN_PASSWORD: qwerty
+#      INFLUXDB_HTTP_AUTH_ENABLED: "true"
+#
+#  grafana:
+#    image: grafana/grafana:latest
+#    container_name: grafana
+#    ports:
+#      - "3000:3000"
+#    links:
+#      - influxdb
